# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/communication/netstack/netstack_config.gni")

##############################fuzztest##########################################
NETSTACK_NAPI_ROOT = "$SUBSYSTEM_DIR/netstack/frameworks/js/napi/"

utils_include = [
  "$SUBSYSTEM_DIR/netstack/utils/common_utils/include",
  "$SUBSYSTEM_DIR/netstack/utils/log/include",
  "$THIRD_PARTY_ROOT/curl/include",
]

common_external_deps = [
  "c_utils:utils",
  "hilog:libhilog",
]

ohos_fuzztest("HttpFuzzTest") {
  module_out_path = fuzz_test_path
  fuzz_config_file = "$NETSTACK_DIR/test/fuzztest/http_fuzzer"
  include_dirs = [
    "$NETSTACK_INNERKITS_DIR/http_client/include",
    "$NETSTACK_DIR/utils/napi_utils/include",
    "$NETSTACK_NAPI_ROOT/http/constant/include",
    "$NETSTACK_NAPI_ROOT/http/options/include",
  ]
  include_dirs += utils_include

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-flto",
    "-fsanitize=cfi",
    "-fsanitize-cfi-cross-dso",
    "-fvisibility=hidden",
  ]

  ldflags = [
    "-flto",
    "-fsanitize=cfi",
    "-fsanitize-cfi-cross-dso",
  ]

  sources = [
    "$NETSTACK_NAPI_ROOT/http/constant/src/constant.cpp",
    "$NETSTACK_NAPI_ROOT/http/options/src/http_request_options.cpp",
    "$SUBSYSTEM_DIR/netstack/utils/common_utils/src/netstack_common_utils.cpp",
    "http_fuzzer.cpp",
  ]

  deps = [
    "$NETSTACK_DIR/utils/napi_utils:napi_utils",
    "$NETSTACK_INNERKITS_DIR/http_client:http_client",
  ]

  external_deps = common_external_deps
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":HttpFuzzTest" ]
}
###############################################################################
